components/services/zylos-service-cart/overlays/dev/netpol-cart-reaper-corn-job.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zylos-cart-reaper-corn-job-egress-netpol
  namespace: zylos-cart
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cart-reaper
      app.kubernetes.io/part-of: zylos-platform
  policyTypes:
    - Egress
  egress:
    - to:
        # Allow traffic TO the catalog backend pods
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: zylos-service-catalog
              app.kubernetes.io/instance: zylos-service-catalog
      ports:
        - protocol: TCP
          port: 9000
